--- a/configData/eureka-server.yml
+++ b/configData/eureka-server.yml
@@ -11,4 +11,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance}localhost:8761/eureka
+      defaultZone: http://${eureka.instance}:${server.port}/eureka/
