--- a/configData/api-customer.yml
+++ b/configData/api-customer.yml
@@ -12,7 +12,7 @@ spring:
     hibernate:
       dialect: org.hibernate.dialect.MySQL8Dialect
     jpa:
-      hibernate.ddl-auto: update
+      hibernate.ddl-auto: create-drop
       generate-ddl: true
       show-sql: true
 
