--- a/configData/api-customer.yml
+++ b/configData/api-customer.yml
@@ -1,24 +1,22 @@
 server:
   port: ${PORT:${SERVER_PORT:0}}
-
 spring:
   application:
     name: api-customer
   datasource:
-    url: jdbc:mysql://localhost:3306/back?createDatabaseIfNotExist=true&useUnicode=true&amp&characterEncoding=utf-8&autoReconnect=true
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/baseback
     username: root
     password: Wire2681
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hibernate:
-      dialect: org.hibernate.dialect.MySQL8Dialect
-    jpa:
-      hibernate.ddl-auto: create-drop
-      generate-ddl: true
-      show-sql: true
+  jpa:
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
 
 info:
   application:
     name: api-customer
+
 eureka:
   instance:
     hostname: localhost
@@ -28,12 +26,5 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-
-
-
-
-
-
-
 
 
