--- a/configData/api-wallet.yml
+++ b/configData/api-wallet.yml
@@ -4,13 +4,10 @@ spring:
   application:
     name: api-wallet
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/back?createDatabaseIfNotExist=true&useUnicode=true&amp&characterEncoding=utf-8&autoReconnect=true
-
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/baseback
     username: root
     password: Wire2681
-    hibernate:
-      dialect: org.hibernate.dialect.MySQL8Dialect
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
@@ -19,7 +16,6 @@ spring:
 info:
   application:
     name: api-wallet
-
 
 eureka:
   instance:
