--- a/configData/gateway.yml
+++ b/configData/gateway.yml
@@ -18,6 +18,10 @@ spring:
           uri: lb://api-wallet
           predicates:
             - Path=/wallet/**
+        - id: mssmargins
+          uri: lb://api-margins
+          predicates:
+            - Path=/calculate/**
 
 info:
   app:
