--- a/configData/api-movie.yml
+++ b/configData/api-movie.yml
@@ -2,7 +2,7 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
 spring:
   application:
-    name: api-customer
+    name: api-movie
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/baseback
     username: root
